objects/Phone_Lookup__c.object
<CustomObject>
    <description>Custom Object to associate incoming phone numbers related to an inbound screen pop. Aside from the Account&apos;s primary DID/ANI number (sometimes referred to as the CTI phone number), an Account may have 0:M additional phone number associations.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Phone Lookup</relationshipLabel>
        <relationshipName>Phone_Lookup</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Number__c</fullName>
        <label>Match Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <externalId>true</externalId>
        <label>Phone Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Phone Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Match_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Phone Lookup</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>